--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HEYGEN_API_KEY=your Heygen API key
+HEYGEN_API_KEY=MmMwNmE5NzYwMjkyNGEwZDkwODcyY2RkMGZjMDY4YmYtMTcyNTgwMjU5NQ==
 OPENAI_API_KEY=your OpenAI API key
 NEXT_PUBLIC_OPENAI_API_KEY=your OpenAI API key
